--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -22,20 +22,53 @@ if( BUILD_AS_LOCAL_SERVER AND (CMAKE_GENERATOR STREQUAL "Xcode") )
 endif( BUILD_AS_LOCAL_SERVER AND (CMAKE_GENERATOR STREQUAL "Xcode") )
 
 
-find_package( Boost REQUIRED COMPONENTS program_options date_time system filesystem unit_test_framework )
+find_package( Boost REQUIRED COMPONENTS program_options date_time system filesystem )
 
 if( NOT Boost_FOUND )
   message(FATAL_ERROR "Couldnt Find Boost")
 endif( NOT Boost_FOUND )
 
-#set( BOOST_LINK_LIBS ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_DATE_TIME_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} )
+
+# We'll look for an installed version of doctest first
+find_package( doctest )
+
+# But if we dont find it, we'll Fetch it
+if( NOT doctest_FOUND )
+  include(ExternalProject)
+  find_package(Git REQUIRED)
+
+  ExternalProject_Add(
+      doctest
+      PREFIX ${CMAKE_BINARY_DIR}/doctest
+      GIT_REPOSITORY https://github.com/doctest/doctest.git
+      GIT_TAG ae7a13539fb71f270b87eb2e874fbac80bc8dda2  #v2.4.11, Mar 15, 2023
+      GIT_SHALLOW ON
+      TIMEOUT 10
+      CONFIGURE_COMMAND ""
+      BUILD_COMMAND ""
+      INSTALL_COMMAND ""
+      LOG_DOWNLOAD ON
+  )
+
+  ExternalProject_Get_Property(doctest source_dir)
+  set( DOCTEST_INCLUDE_DIR ${source_dir}/doctest CACHE INTERNAL "Path to include folder for doctest")
+endif( NOT doctest_FOUND )
+
+# Make include for Doctest
+include_directories( ${DOCTEST_INCLUDE_DIR} )
 
 # Set some command line arguments that all/most of the tests will use
 set( COMMON_TEST_ARGS --log_level=test_suite --report_level=detailed --catch_system_errors=yes )
 set( DATA_DIR_ARGS --indir=\\"${CMAKE_CURRENT_SOURCE_DIR}/test_data\\" )
 
+
+if( CMAKE_GENERATOR STREQUAL "Xcode" )
+  list( APPEND COMMON_TEST_ARGS --no-colors=1 )
+endif( CMAKE_GENERATOR STREQUAL "Xcode" )
+message( "Args: ${COMMON_TEST_ARGS}")
+
 add_executable( test_energy_calibration test_energy_calibration.cpp )
-target_link_libraries( test_energy_calibration PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_energy_calibration PRIVATE SpecUtils )
 set_target_properties( test_energy_calibration PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test( NAME TestEnergyCalibration
           COMMAND $<TARGET_FILE:test_energy_calibration> ${COMMON_TEST_ARGS} -- ${DATA_DIR_ARGS}
@@ -43,7 +76,7 @@ add_test( NAME TestEnergyCalibration
 
 
 add_executable( test_spec_file_open test_spec_file_open.cpp )
-target_link_libraries( test_spec_file_open PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_spec_file_open PRIVATE SpecUtils )
 set_target_properties( test_spec_file_open PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 FILE(GLOB children RELATIVE ${ADD_TEST_SPEC_DIR} ${ADD_TEST_SPEC_DIR}/*)
 FOREACH(child ${children})
@@ -62,7 +95,7 @@ ENDFOREACH()
 
 
 add_executable( test_iso_time_string test_iso_time_string.cpp )
-target_link_libraries( test_iso_time_string PRIVATE SpecUtils Boost::unit_test_framework Boost::date_time)
+target_link_libraries( test_iso_time_string PRIVATE SpecUtils Boost::date_time)
 set_target_properties( test_iso_time_string PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestIsoTimeString
@@ -71,7 +104,7 @@ add_test(
 )
 
 add_executable( test_safe_get_line test_safe_get_line.cpp )
-target_link_libraries( test_safe_get_line PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_safe_get_line PRIVATE SpecUtils )
 set_target_properties( test_safe_get_line PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestSafeGetLine
@@ -81,7 +114,7 @@ add_test(
 
 
 add_executable( test_time_from_string test_time_from_string.cpp )
-target_link_libraries( test_time_from_string PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_time_from_string PRIVATE SpecUtils )
 set_target_properties( test_time_from_string PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestTimeFromString
@@ -91,7 +124,7 @@ add_test(
 
 
 add_executable( test_string_functions test_string_functions.cpp )
-target_link_libraries( test_string_functions PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_string_functions PRIVATE SpecUtils )
 set_target_properties( test_string_functions PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestUtilityStringFunctions
@@ -101,7 +134,7 @@ add_test(
 
 
 add_executable( test_split_to_floats_and_ints test_split_to_floats_and_ints.cpp )
-target_link_libraries( test_split_to_floats_and_ints PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_split_to_floats_and_ints PRIVATE SpecUtils )
 set_target_properties( test_split_to_floats_and_ints PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestSplitToFloats
@@ -111,7 +144,7 @@ add_test(
 
 
 add_executable( test_utf8_limit_str_size test_utf8_limit_str_size.cpp )
-target_link_libraries( test_utf8_limit_str_size PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_utf8_limit_str_size PRIVATE SpecUtils )
 set_target_properties( test_utf8_limit_str_size PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestUtf8LimitStrSize
@@ -121,7 +154,7 @@ add_test(
 
 
 add_executable( test_utf8_str_len test_utf8_str_len.cpp )
-target_link_libraries( test_utf8_str_len PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_utf8_str_len PRIVATE SpecUtils )
 set_target_properties( test_utf8_str_len PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestUtf8StrLen
@@ -130,7 +163,7 @@ add_test(
 )
 
 add_executable( test_cubic_spline test_cubic_spline.cpp )
-target_link_libraries( test_cubic_spline PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_cubic_spline PRIVATE SpecUtils )
 set_target_properties( test_cubic_spline PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestCubicSpline
@@ -140,7 +173,7 @@ add_test(
 
 
 add_executable( test_filesystem_functions test_filesystem_functions.cpp )
-target_link_libraries( test_filesystem_functions PRIVATE SpecUtils Boost::unit_test_framework Boost::filesystem )
+target_link_libraries( test_filesystem_functions PRIVATE SpecUtils Boost::filesystem )
 set_target_properties( test_filesystem_functions PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME testUtilityFilesystemFunctions
@@ -148,7 +181,7 @@ add_test(
 )
 
 add_executable( test_rebin_by_lower_energy test_rebin_by_lower_energy.cpp )
-target_link_libraries( test_rebin_by_lower_energy PRIVATE SpecUtils Boost::unit_test_framework )
+target_link_libraries( test_rebin_by_lower_energy PRIVATE SpecUtils )
 set_target_properties( test_rebin_by_lower_energy PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 add_test(
   NAME TestRebinByLowerEnergy
@@ -157,7 +190,7 @@ add_test(
 
 if( SpecUtils_ENABLE_URI_SPECTRA )
   add_executable( test_uri_spectrum test_uri_spectrum.cpp )
-  target_link_libraries( test_uri_spectrum PRIVATE SpecUtils Boost::unit_test_framework )
+  target_link_libraries( test_uri_spectrum PRIVATE SpecUtils )
   set_target_properties( test_uri_spectrum PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
   add_test(
     NAME test_uri_spectrum
