Finish removing boost from tests, as long as `PERFORM_DEVELOPER_CHECKS` is not defined.
There are a couple places where boost will be used if `PERFORM_DEVELOPER_CHECKS` is set to true - these could probably be safely removed, but we'll probably leave a few other runtime tests against the values given by boost, if `PERFORM_DEVELOPER_CHECKS` is enabled, so leaving in for now.

--- a/regression_test/CMakeLists.txt
+++ b/regression_test/CMakeLists.txt
@@ -3,19 +3,13 @@ project(SpecUtilsRegressionTest VERSION 1)
 
 cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
 
-find_package( Boost REQUIRED COMPONENTS program_options date_time system filesystem )
-
-if( NOT Boost_FOUND )
-  message(FATAL_ERROR "Couldnt Find Boost")
-endif( NOT Boost_FOUND )
-
 if( NOT SpecUtils_ENABLE_EQUALITY_CHECKS )
   message( FATAL_ERROR "SpecUtils_ENABLE_EQUALITY_CHECKS must be enabled when building regression_test executable" )
 endif( NOT SpecUtils_ENABLE_EQUALITY_CHECKS )
 
 add_executable( regression_test regression_test.cpp )
 
-target_link_libraries( regression_test PUBLIC SpecUtils Boost::program_options Boost::date_time Boost::system Boost::filesystem )
+target_link_libraries( regression_test PUBLIC SpecUtils )
 
 set_target_properties( regression_test PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO )
 
