--- a/SpecUtils/SpecUtils_config.h.in
+++ b/SpecUtils/SpecUtils_config.h.in
@@ -39,7 +39,10 @@
 #cmakedefine01 SpecUtils_USE_SIMD
 #cmakedefine01 SpecUtils_ENABLE_EQUALITY_CHECKS
 
+#cmakedefine01 SpecUtils_USE_FAST_FLOAT
 #cmakedefine01 SpecUtils_USE_FROM_CHARS
+#cmakedefine01 SpecUtils_USE_BOOST_SPIRIT
+#cmakedefine01 SpecUtils_USE_STRTOD
 
 #include <cmath>
 
